<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SeTuAlergia"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="365dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:background="@color/tColor"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mono_normal"
            android:text="@string/stSeTuAlergia"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingBottom="16dp"
            android:textColor="@color/foreground"/>

        <Button
            android:id="@+id/btnSeleccionarAlergias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btnBackground"
            android:fontFamily="@font/mono_normal"
            android:padding="12dp"
            android:text="@string/stSeleccionarAlergias"
            android:textColor="@color/foreground" />

        <Spinner
            android:id="@+id/spinnerAlergias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:spinnerMode="dropdown"/>

        <LinearLayout
            android:id="@+id/llAlergiasSeleccionadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"/>

        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mono_normal"
            android:text="@string/stContinuar"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/btnBack"
            android:padding="12dp"
            android:textColor="@color/btnText"/>
    </LinearLayout>
</LinearLayout>